# ontology-framework

./: .dockerignore  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .session  .sourcery.yaml  Dockerfile  Dockerfile.bfg9k  Dockerfile.guidance  Dockerfile.plantuml  Ducati_Multistrada_V4_RS.md  EXAMPLE.md  Info.plist  QuotaUsage_2025-05-09T07_31_25.csv  README-plantuml-server.md  README-plantuml-server_diagram_1.puml  README.md  README_shacl_graphdb.md  SPORE_CONCEPT.md  STATUS.md  abematv.py  abematv.ttl  action_modularize_docs_exec.ttl  actor_user.puml  add_validation_rules.py  advanced_features_batch.md  advanced_features_batch.ttl  agent_declaration.ttl  ai_tools.md  ai_tools.ttl  als.ttl  analyze_guidance.py  analyze_guidance_state.py  analyze_model_coverage.py  api_documentation.ttl  api_exploration.ttl  architecture_diagram.puml  artifact-representation-rule.ttl  (+418 more)
.cursor/: commit_message.txt  environment.json  mcp.json  mcp.json.bak  mcp_bfg9k.json  mcp_infrastructure.json  ontology_framework_development_rules.mdc  python_manifest_requirements.mdc  toml_manifest_validation.mdc
.devcontainer/: Dockerfile  devcontainer.json
___000-incoming/: artifact_traceability_rules.md  artifact_traceability_ruleset.ttl  artifact_traceability_ruleset_analysis.md  complete_ruleset_implementation.md  complete_shacl_validation.md  delegation_protocol_analysis.md  delegation_protocol_core.ttl  delegation_protocol_implementation.md  delegation_test_violations.md  enhanced_precommit_config.md  enhanced_validation_toolkit.md  lifecycle_validation_queries.md  test-delegation-violations.md  test-violations.ttl  test_violations_artifact.md  test_violations_documentation.md  traceability_enforcement_download.md  traceability_enforcement_mdc.md  traceability_requirement.ttl  traceability_requirement_analysis.md  validate.py  validation-shapes.ttl
baldo-devbox-fr-arm/: parameters.json  template.json
boldo-devbox-arm/: parameters.json  template.json
chrome/: .metadata
chromedriver/: .metadata
diagrams/: implementation_flow.puml
directory_sync/: __init__.py  cli.py  sync.py
docs/: BRANCHING_STRATEGY.md  EXAMPLE.md  README.md  abematv_security.md  example_org_inventory.md  graphdb_client_analysis.md  graphdb_client_model.puml  issue_planning_process.md  namespace_dependency_analysis.md  namespace_migration_plan.md  namespace_recovery_plan.md  patch_management.md  project_maintenance.md  python_validation.md  usage_patterns_analysis.md  validation_patterns_convention.md  workflow_setup_plan.md
modeling-response-ontology-v3/: README.md
models/: change_tracking.ttl  checkin_process.ttl  checkin_progress.ttl  dag_validation_patterns.ttl  mcp_prompt.ttl  openflow_playground.ttl  openflow_transformations.ttl  plan_model.ttl  project_maintenance.ttl  recovery_plan.md  recovery_plan.ttl  transferred_scopes_recovery_plan.md  transferred_scopes_recovery_plan.ttl
notebooks/: Untitled.ipynb
ontologies/: structure_annotation.ttl  structure_core.ttl  structure_shapes.ttl
ontology_framework/: __init__.py  cli.py  config.py  deployment_modeler.py  error_handling.py  exceptions.py  github_project_manager.py  graphdb_client.py  guidance_loader.py  guidance_manager.py  manage_models.py  meta.py  namespace_recovery.py  namespace_recovery_test.py  oracle_rdf.py  patch.py  patch_management.py  python_validator.py  register_ontology.py  spore_integration.py  spore_validation.py  validation.py
prompt-manager/: README.md  analyze-ttl.prompt  compose-readme.ttl  docker-compose.yml  interpret-ontology.prompt  prompt-manager.prompt  prompt-manager.ttl  requirements.txt  setup.py  setup.sh  transformed_compose-readme.ttl  transformed_prompt-manager.ttl
repair_reports/: graphdb_validator_repair.ttl  mcp_config_repair.ttl  repair_summary.ttl  test_analysis.ttl  test_findings.ttl
scripts/: __init__.py  add_error_handling.py  add_missing_metadata.py  analyze_usage_patterns.py  check_ontology_status.py  deploy.py  edit_ttl.py  enhance_ontology.py  enhance_ontology.py.quickfix_bak  explore_guidance.py  find_orphaned_modules.py  fix_comma_issues.py  fix_iri_format.py  fix_iri_issues.py  fix_node_imports.py  fix_ontology_paths.py  fix_prefixes.py  fix_rdflib_imports.py  fix_turtle_syntax.py  fix_validation_issues.py  (+42 more)
tools/: Cargo.toml  bfg9k_rdf_engine.rs  build_wasm.sh
tools/src/: lib.rs
(+591 files in other folders)
