[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontology-framework-cli"
version = "0.1.0"
description = "CLI tool for managing ontology framework guidance"
authors = [
    {name = "Lou Springer", email = "louspringer@example.com"}
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "rdflib>=6.0.0",
    "requests>=2.0.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0.0",
    "pyshacl>=0.20.0",
    "oracledb>=1.3.0"
]
requires-python = ">=3.9.0, <4.0.0"

[project.scripts]
ontology = "ontology_framework.cli:cli"

[project.optional-dependencies]
dev = [
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ontology_framework"]

[tool.pytest.ini_options]
addopts = "--cov=ontology_framework --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ontology_framework"]
omit = ["tests/*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "rdflib.*"
]
ignore_missing_imports = true 