[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-framework"
version = "0.1.0"
description = "A framework for working with ontologies and implementing the Model Context Protocol (MCP)"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "rdflib>=6.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "black>=22.0.0",
    "pytest>=7.0.0",
    "rich>=10.0.0",
    "requests>=2.0.0",
    "pyshacl>=0.20.0",
    "pytest-docker>=1.0.0",
    "oracledb>=1.3.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0.0",
    "PyGithub>=2.1.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[project.scripts]
ontology = "ontology_framework.cli:main"
mcp = "ontology_framework.mcp.cli:main" 